add author to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,9 @@ Type: Package
 Title: Lab3-Team5
 Version: 0.1.0
 Authors@R: person("Xin", "Zhang", email = "xinzhang@example.com",
-                  role = "cre")
+                  role = "cre"),
+           person("Zahra", "Khoshmanesh", email = "zkh@iastate.edu",
+                  role = "cre")       
 Description: This package is from Team 5 for Lab 3 at STAT 585.
 License: GPL-3
 Encoding: UTF-8
