--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,32 +2,11 @@ Package: Team5
 Type: Package
 Title: Lab3-Team5
 Version: 0.1.0
-Authors@R: person("Xin", "Zhang", email = "xinzhang@example.com",
-                  role = "cre"),
-           person("Zahra", "Khoshmanesh", email = "zkh@iastate.edu",
-                  role = "cre")       
+Authors@R: person("Xin", "Zhang", email = "xinzhang@example.com",role = "cre") 
 Description: This package is from Team 5 for Lab 3 at STAT 585.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-<<<<<<< HEAD
 RoxygenNote: 6.1.1
-=======
-Suggests: 
-    testthat
-Imports:
-<<<<<<< HEAD
-    checkmate,tidyverse,purrr,ggplot2,sf,maptools
-RoxygenNote: 6.1.1
->>>>>>> d7d6e9ebd3b9ae4ec7a08a1dd656342a281cfc0c
-=======
-    checkmate,
-    tidyverse,
-    purrr,
-    ggplot2,
-    sf,
-    maptools,
-    stats,
-    methods
-RoxygenNote: 6.1.1
->>>>>>> b392adb9aea6c2de5c7427f8a397c88b453b91f1
+Suggests: testthat
+Imports:checkmate,tidyverse,purrr,ggplot2,sf,maptools,stats,methods
