--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: testthat
-Imports:checkmate,tidyverse,purrr,ggplot2,sf,maptools,stats,methods
+Imports:checkmate,tidyverse,purrr,ggplot2,sf,maptools,stats,methods,dplyr
