--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,13 @@ Package: Team5
 Type: Package
 Title: Lab3-Team5
 Version: 0.1.0
-Authors@R: person("Xin", "Zhang", email = "xinzhang@example.com",role = "cre") 
+Author: Seyedehzahra Khoshmanesh, Jing Li, and Xin Zhang
+Maintainer: Xin Zhang <xinzhang@iastate.edu>
 Description: This package is from Team 5 for Lab 3 at STAT 585.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: testthat
-Imports:checkmate,tidyverse,purrr,ggplot2,sf,maptools,stats,methods,dplyr
+Imports:checkmate,tidyverse,purrr,ggplot2,sf,maptools,methods,dplyr
+Depends: stats
